--- a/Basic_AI.html
+++ b/Basic_AI.html
@@ -23,14 +23,14 @@
             <div class="px-16 flex items-center justify-center h-16">
                 <img src="Photo/E-LOGO.png" alt="E-LOGO">
                 <!-- Back To homepage -->
-                <a href="index.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
+                <a href="manu_e.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
             </div>
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-white font-bold text-lg FontThai">เลือก E-Learning</div>
+                <div class="px-6 py-2 text-gray-300 text-center tracking-tighter font-bold text-lg FontThai">เลือก E-Learning</div>
                 <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
-                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/EaprbQwPDMlBliHWssU5dCgBdgFDSTCVVefwkJeuqH5gyg?e=DFUfDk" target="_blank" class="bg-emerald-500 text-white FontThai hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 rounded-none py-3 px-6">เอกสารประกอบการอบรม</a>
+                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/EaprbQwPDMlBliHWssU5dCgBdgFDSTCVVefwkJeuqH5gyg?e=DFUfDk" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
                 </nav>
             </div>
         </aside>
@@ -64,7 +64,7 @@
                         ถ้าหากไม่ได้ "ลงทะเบียน" แต่มีการทำบททดสอบ "ผลสอบ" ถือเป็น "โมฆะ"
                     </p>
                     <div class="flex items-center">
-                        <a href="https://forms.office.com/r/0bSmAKSarc" target="_blank" 
+                        <a href="Regis_Basic_AI.html" 
                             class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ลงทะเบียน</a>
                         <div>
@@ -108,7 +108,7 @@
                         ทำแบบทดสอบเพื่อวัดผลในการสอบ ผู้เข้าอบรมต้องได้คะแนน 30 คะแนน จาก 40 คะแนน ถึงจะผ่านการทดสอบ
                     </p>
                     <div class="flex items-center">
-                        <a href="https://forms.office.com/r/GzpgRv2n5Y" target="_blank" 
+                        <a href="Test_Basic_AI.html"
                             class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ทำแบบทดสอบ</a>
                         <div>
@@ -118,11 +118,6 @@
                 </div>
            </div>
         </div>
-            <div class="grid grid-cols-1 md:grid-cols-1 gap-2 items-end ">
-                    <!-- ClassName -->
-                <ul class="text-base FontThai "> หมายเหตุ </ul>
-                <li class="text-xs FontThai"> ผู้ที่เคยเข้าร่วมฝึกอบรม Basic Generative AI for EAGLES ครั้งที่ 1ไม่จำเป็นต้องเข้าร่วม</li>
-            </div>
         </main>
     </div>
 </body>
