--- a/Basic_Ai_vid.html
+++ b/Basic_Ai_vid.html
@@ -27,7 +27,7 @@
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-white font-bold FontThai">ชมวิดีโอ E-Learning</div>
+                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">ชมวิดีโอ E-Learning</div>
             </div>
         </aside>
 
