--- a/Regis_IT_policie.html
+++ b/Regis_IT_policie.html
@@ -24,10 +24,10 @@
                 <img src="Photo/E-LOGO.png" alt="E-LOGO">
                 <a href="IT_Policie.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับสู่หน้า E-Learning</a>
             </div>
-            
             <!-- Side Bar Frame -->
-            <div class="pt-4">
-                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">ชมวิดีโอ E-Learning</div>
+            <div>
+                <div class="px-6 py-2 text-gray-300 font-bold tracking-tighter text-center FontThai">ลงทะเบียน E-Learning</div>
+                <div class="px-6 FontThai">เมื่อผู้เรียนได้ทำการลงทะเบียนแล้วเสร็จกรุณาเลือก<p class="FontThai text-amber-300">"กลับสู่หน้า E-Learning"</p>เพื่อกลับสู่บทเรียน</div>
             </div>
         </aside>
 
@@ -42,7 +42,7 @@
         <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
 
             <div class="mx-12 bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai ">
-                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai.sharepoint.com/sites/IT-Document/_layouts/15/embed.aspx?UniqueId=a8789028-91a5-4052-97e3-b00e6dc83ffb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
+                <div style="max-width: 1300px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/1txBSsaXQJ" width="1300" height="760" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
             </div>
 
             </div>
