--- a/Test_Basic_AI.html
+++ b/Test_Basic_AI.html
@@ -27,7 +27,8 @@
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">ชมวิดีโอ E-Learning</div>
+                <div class="px-6 py-2 text-gray-300 font-bold tracking-tighter text-center FontThai">ทำแบบทดสอบ E-Learning</div>
+                <div class="px-6 FontThai">เมื่อผู้เรียนทำแบบทดสอบที่หน้าต่างด้าน<span class="FontThai text-amber-300">"ขวา"</span>เมื่อแล้วเสร็จจะถือเป็นการจบการเรียน</div>
             </div>
         </aside>
 
@@ -42,7 +43,7 @@
         <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
 
             <div class="mx-12 bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai ">
-                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai.sharepoint.com/sites/IT-Document/_layouts/15/embed.aspx?UniqueId=a8789028-91a5-4052-97e3-b00e6dc83ffb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
+                <div style="max-width: 1300px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/GzpgRv2n5Y" width="1300" height="760" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
             </div>
 
             </div>
