--- a/index.html
+++ b/index.html
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
-    <title>EAGLES Knowledge zone</title>
+    <title>EAGLES Knowledge zone.</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .FontThai {
-                font-family: 'Noto Sans Thai';
+            font-family: 'Noto Sans Thai';
         }
-
         .FontSarabun {
-                font-family: 'Sarabun';
+            font-family: 'Sarabun';
         }
     </style>
 </head>
-<body class="font-sans ">
-
-    <div class="flex h-screen bg-gray-100">
-        <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
-            <div class="px-16 flex items-center justify-center h-16">
-                <img src="Photo/E-LOGO.png" alt="E-LOGO">
-            </div>
-            
-            <!-- Side Bar Frame -->
-            <div class="pt-4">
-                <div class="px-6 py-2 text-white font-bold FontThai">หมวดหมู่ EAGLES Knowledge</div>
-                <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
-                    <!-- Manu Class -->
-                    <a href="manu_e.html" class="bg-emerald-500 text-white hover:bg-emerald-600 transition FontThai duration-300 ease-in-out transform hover:scale-105 rounded-none py-3 px-6">Eagles E-Learning</a>
-                    <a href="manu_v.html" class="bg-emerald-500 text-white FontThai hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 rounded-none py-3 px-6">วิดีโอการอบรมภายนอกของพนักงาน Eagles</a>
-                </nav>
-            </div>
-        </aside>
-
-        <main class="flex-grow flex flex-col">
-            <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl FontThai">
-                โปรดเลือกหมวดหมู่
-            </header>
-                    <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
-                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">EAGLES Knowledge zone</p>
-                    </div>
-        </main>
-
+<body>
+<div class="bg-gradient-to-b from-blue-500 to-orange-400">
+  <header class="absolute inset-x-0 top-0 z-50">
+  </header>
+  <div class="relative isolate px-6 pt-14">
+    <div aria-hidden="true" class="absolute inset-x-0 -top-30 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-30">
+      <div style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)" class="relative left-[calc(50%-11rem)] aspect-1155/678 w-144.5 -translate-x-1/2 rotate-30 bg-linear-to-tr from-[#99450c] to-[#3e12a6] opacity-30 sm:left-[calc(50%-30rem)] sm:w-288.75"></div>
     </div>
-
+    <div class="mx-auto max-w-2xl h-screen py-32 sm:py-48 lg:py-56">
+      <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+      </div>
+      <div class="text-center">
+        <h1 class="FontThai tracking-tighter text-5xl text-transparent bg-clip-text bg-gradient-to-r to-blue-300 from-amber-100">EAGLES Knowledge zone.</h1>
+        <div class="mt-10 flex items-center justify-center gap-x-6">
+          <a href="manu_page.html" class="rounded-none bg-indigo-500 px-6 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">เข้าสู่ระบบ</a>
+          <a href="readmore.html" class="text-sm/6 text-white transition hover:scale-105 FontThai">ข้อมูลเพิ่มเติม<span aria-hidden="true">→</span></a>
+        </div>
+      </div>
+      <div class="absolute bottom-0 right-0 text-white bg-black">Eagles air & sea (thailand) co. ltd</div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
