--- a/manu_external.html
+++ b/manu_external.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body class="font-sans ">
+
     <div class="flex h-screen bg-gray-100">
         <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             <div class="px-16 flex items-center justify-center h-16">
@@ -27,21 +28,21 @@
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือก E-Learning</div>
+                <div class="px-6 py-2 text-gray-300 text-center tracking-tighter font-bold text-lg FontThai">เลือกการอบรม</div>
                 <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
                     <!-- Manu Class -->
-                    <a href="IT_Policie.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">IT Security Awareness & IT Policies E-Learning</a>
-                    <a href="Basic_AI.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Basic Generative AI for Eagle E-Learning</a>
+                    <a href="external_Foxit_page.html" class="rounded-none px-4 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้ Foxit PDF Editor</a>
+                    <a href="external_ibi_page.html" class="rounded-none px-4 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้งาน IBI</a>
                 </nav>
             </div>
         </aside>
 
         <main class="flex-grow flex flex-col">
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
-                <h3 class="ml-6 mr-auto FontThai ">Eagles E-Learning</h3>
+                <h3 class="ml-6 mr-auto FontThai ">วิดีโอการอบรมภายนอกของพนักงาน Eagles</h3>
             </header>
                     <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
-                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">EAGLES E-LEARNING</p>
+                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">การอบรมภายนอกของพนักงาน Eagles</p>
                     </div>
         </main>
 
