--- a/Basic_AI.html
+++ b/Basic_AI.html
@@ -7,6 +7,7 @@
     <title>EAGLES Knowledge zone</title>
     <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="overlay.js"></script>
     <style>
         .FontThai {
                 font-family: 'Noto Sans Thai';
@@ -29,8 +30,8 @@
             <!-- Side Bar Frame -->
             <div class="pt-4">
                 <div class="px-6 py-2 text-gray-300 text-center tracking-tighter font-bold text-lg FontThai">เลือก E-Learning</div>
-                <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
-                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/EaprbQwPDMlBliHWssU5dCgBdgFDSTCVVefwkJeuqH5gyg?e=DFUfDk" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
+                <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-4">
+                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/EaprbQwPDMlBliHWssU5dCgBdgFDSTCVVefwkJeuqH5gyg?e=DFUfDk" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
                 </nav>
             </div>
         </aside>
@@ -64,12 +65,14 @@
                         ถ้าหากไม่ได้ "ลงทะเบียน" แต่มีการทำบททดสอบ "ผลสอบ" ถือเป็น "โมฆะ"
                     </p>
                     <div class="flex items-center">
-                        <a href="Regis_Basic_AI.html" 
-                            class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ลงทะเบียน</a>
+                            <!-- Button Overlay Frame Regis -->
+                        <button id="open-drawer-btn-regis" class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ลงทะเบียน
+                        </button>
                         <div>
                             <p class="text-gray-400 text-sm">คลิกเพื่อลงทะเบียน</p>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -105,12 +108,13 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">3.ทำแบบทดสอบ</h3>
                     <p class="text-gray-400 mb-6 line-clamp-3">
-                        ทำแบบทดสอบเพื่อวัดผลในการสอบ ผู้เข้าอบรมต้องได้คะแนน 30 คะแนน จาก 40 คะแนน ถึงจะผ่านการทดสอบ
+                        ทำแบบทดสอบเพื่อวัดผลในการสอบ ผู้เข้าอบรมต้องได้คะแนน 24 คะแนน จาก 30 คะแนน ถึงจะผ่านการทดสอบ
                     </p>
                     <div class="flex items-center">
-                        <a href="Test_Basic_AI.html"
-                            class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ทำแบบทดสอบ</a>
+                        <button id="open-drawer-btn-test" class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ลงทะเบียน
+                        </button>
+                        
                         <div>
                             <p class="text-gray-400 text-sm">คลิกเพื่อทำแบบทดสอบ</p>
                         </div>                        
@@ -119,6 +123,39 @@
            </div>
         </div>
         </main>
+        <!-- คำสั่ง Overlay Frame ที่ผูกกับปุ่ม "ลงทะเบียน" กับ "ทำแบบทดสอบ" -->
+        <!-- Overlay Frame Register -->
+        <div id="drawer-overlay-regis" class="fixed inset-0 bg-black opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
+            <div id="drawer-regis" class="fixed top-0 right-0 h-full w-3/4 bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mb-4">
+                         <h2 class="text-xl font-bold FontThai">ลงทะเบียน</h2>
+                        <button id="close-drawer-btn-regis" class="text-gray-500 hover:text-gray-700">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/0bSmAKSarc" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
+                </div>
+            </div>
+
+        <!-- Overlay Frame test -->
+        <div id="drawer-overlay-Test" class="fixed inset-0 bg-black opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
+            <div id="drawer-test" class="fixed top-0 right-0 h-full w-3/4 bg-white shadow-xl transform translate-x-full transition-transform duration-300 z-50">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-xl font-bold FontThai">ทำแบบทดสอบ</h2>
+                        <button id="close-drawer-btn-test" class="text-gray-500 hover:text-gray-700">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/GzpgRv2n5Y" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
