--- a/E_learning_template/ETemplate.html
+++ b/E_learning_template/ETemplate.html
@@ -7,7 +7,7 @@
     <title>EAGLES Knowledge zone</title>
     <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="overlay.js"></script>
+    <script src="script.js"></script>
     <style>
         .FontThai {
                 font-family: 'Noto Sans Thai';
@@ -30,14 +30,15 @@
             <div class="pt-4">
                 <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือก E-Learning</div>
                 <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-4">
-                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/Edcj32_D4mpHowbaZwrjK8kB6nLzjTSi25221_Mct5-N6w?e=abjUf2" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
+                    <!-- ใส่ลิ้งค์เอกสาร -->
+                    <a href="#" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
                 </nav>
             </div>
         </aside>
 
         <main class="flex-grow flex flex-col">
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
-                <h3 class="ml-6 mr-auto FontThai ">IT Security Awareness & IT Policies E-Learning</h3>
+                <h3 class="ml-6 mr-auto FontThai "> ใส่ชื่อ E-Learning </h3>
             </header>
 
             <!-- Frame เนื้อหา -->
@@ -46,7 +47,7 @@
         <div class="text-center">
             <!-- ClassName -->
             <p class="text-xl FontThai"> วัตถุประสงค์ </p>
-            <p class="text-sm FontThai"> เพื่อเสริมสร้างความเข้าใจและความตระหนักรู้เกี่ยวกับนโยบายของแผนก IT และส่งเสริมให้พนักงานทุกคนสามารถปฏิบัติตามนโยบายดังกล่าวได้อย่างถูกต้องและมีประสิทธิภาพ</p><br>
+            <p class="text-sm FontThai"> ใส่วัตถุประสงค์ </p><br>
         </div>
 
             <!-- Card frame -->
@@ -88,7 +89,8 @@
                         รับชมวิดีโอการอบรม <br><br><br>
                     </p>
                     <div class="flex items-center">
-                        <span><a href="IT_policie_vid.html"
+                        <!-- ใส่ลิ้งค์หน้า Page ที่มี Videos -->
+                        <span><a href="#"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">E-Learning</a></span>
                         <span><p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p></span>
@@ -105,7 +107,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">3.ทำแบบทดสอบ</h3>
                     <p class="text-gray-400 mb-6 line-clamp-3">
-                        ทำแบบทดสอบเพื่อวัดผลในการสอบ ผู้เข้าอบรมต้องได้คะแนน 30 คะแนน จาก 40 คะแนน ถึงจะผ่านการทดสอบ
+                        ใส่รายละเอียดของคะแนน
                     </p>
                     <div class="flex items-center">
 
@@ -137,7 +139,8 @@
                             </svg>
                         </button>
                     </div>
-                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/1txBSsaXQJ" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
+                    <!--ใส่ลิ้งค์ฟอร์ม "ลงทะเบียน"-->
+                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="#" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
                 </div>
             </div>
 
@@ -153,7 +156,8 @@
                             </svg>
                         </button>
                     </div>
-                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="https://forms.office.com/r/p48HeJd3yv" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
+                    <!--ใส่ลิ้งค์ฟอร์ม "แบบทดสอบ"-->
+                    <div style="position: relative; padding-bottom: 60.25%; height: 0; overflow: hidden;"><iframe src="#" width="1300" height="0" frameborder="0" scrolling="no" allowfullscreen title="IT Security & IT Policie E-Learning.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div>
                 </div>
             </div>
     </div>
