--- a/manu_e.html
+++ b/manu_e.html
@@ -28,10 +28,10 @@
             <!-- Side Bar Frame -->
             <div class="pt-4">
                 <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือก E-Learning</div>
-                <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
+                <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-4">
                     <!-- Manu Class -->
-                    <a href="IT_Policie.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">IT Security Awareness & IT Policies E-Learning</a>
-                    <a href="Basic_AI.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Basic Generative AI for Eagle E-Learning</a>
+                    <a href="IT_Policie.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">IT Security Awareness & IT Policies E-Learning</a>
+                    <a href="Basic_AI.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Basic Generative AI for Eagle E-Learning</a>
                 </nav>
             </div>
         </aside>
