--- a/manu_external.html
+++ b/manu_external.html
@@ -29,10 +29,10 @@
             <!-- Side Bar Frame -->
             <div class="pt-4">
                 <div class="px-6 py-2 text-gray-300 text-center tracking-tighter font-bold text-lg FontThai">เลือกการอบรม</div>
-                <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-6">
+                <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-6">
                     <!-- Manu Class -->
-                    <a href="external_Foxit_page.html" class="rounded-none px-4 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้ Foxit PDF Editor</a>
-                    <a href="external_ibi_page.html" class="rounded-none px-4 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้งาน IBI</a>
+                    <a href="external_Foxit_page.html" class="rounded-none px-4 py-2 border-b-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้ Foxit PDF Editor</a>
+                    <a href="external_ibi_page.html" class="rounded-none px-4 py-2 border-b-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้งาน IBI</a>
                 </nav>
             </div>
         </aside>
@@ -41,12 +41,10 @@
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
                 <h3 class="ml-6 mr-auto FontThai ">วิดีโอการอบรมภายนอกของพนักงาน Eagles</h3>
             </header>
-                    <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
-                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">การอบรมภายนอกของพนักงาน Eagles</p>
-                    </div>
+                <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
+                    <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">การอบรมภายนอกของพนักงาน Eagles</p>
+                </div>
         </main>
-
     </div>
-
 </body>
 </html>
