--- a/manu_page.html
+++ b/manu_page.html
@@ -28,10 +28,11 @@
             <!-- Side Bar Frame -->
             <div class="pt-4">
                 <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือกหมวดหมู่ <br>EAGLES Knowledge</div>
-                <nav class="mt-4 px-2 grid grid-rows-4 grid-flow-col gap-2">
-                    <!-- Manu Class -->
-                    <a href="manu_e.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Eagles E-Learning</a>
-                    <a href="manu_external.html" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">วิดีโอการอบรมภายนอกของพนักงาน Eagles</a>
+                <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-4">
+                    <!-- Manu Column -->
+                    <a href="manu_e.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Eagles E-Learning</a>
+                    <a href="manu_external.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">วิดีโอการอบรมภายนอกของพนักงาน Eagles</a>
+                    <a href="#" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">การแก้ปัญหาด้วยตัวเอง</a>
                 </nav>
             </div>
         </aside>
