--- a/manu_page.html
+++ b/manu_page.html
@@ -32,7 +32,7 @@
                     <!-- Manu Column -->
                     <a href="manu_e.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">Eagles E-Learning</a>
                     <a href="manu_external.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">วิดีโอการอบรมภายนอกของพนักงาน Eagles</a>
-                    <a href="#" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">การแก้ปัญหาด้วยตัวเอง</a>
+                    <a href="manu_self.html" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">การแก้ปัญหาด้วยตัวเอง</a>
                 </nav>
             </div>
         </aside>
