--- a/manu_self.html
+++ b/manu_self.html
@@ -41,14 +41,15 @@
             </div>
         </aside>
         <main class="flex-grow flex flex-col">
-            <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl FontThai">
-                โปรดเลือกหมวดหมู่
+            <header class="bg-blue-400 h-16 flex text-white font-bold text-xl shadow-xl FontThai">
+                การแก้ปัญหาด้วยตัวเอง
             </header>
                     <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
-                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">EAGLES Knowledge zone</p>
+                        <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-600 from-amber-500 text-2xl hover:text-3xl transition duration-600 ease-in-out transform hover:scale-125">การแก้ปัญหาด้วยตัวเอง</p>
                     </div>
         </main>
     </div>
 </body>
 
 </html>
+
