--- a/manu_self.html
+++ b/manu_self.html
@@ -41,7 +41,7 @@
             </div>
         </aside>
         <main class="flex-grow flex flex-col">
-            <header class="bg-blue-400 h-16 flex text-white font-bold text-xl shadow-xl FontThai">
+            <header class="bg-blue-400 h-16 item-center flex text-white font-bold text-xl shadow-xl FontThai">
                 การแก้ปัญหาด้วยตัวเอง
             </header>
                     <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
@@ -52,4 +52,5 @@
 </body>
 
 </html>
+
 
