--- a/manu_self.html
+++ b/manu_self.html
@@ -29,7 +29,7 @@
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือกหมวดหมู่ <br>การแก้ปัญหาด้วยตัวเอง</div>
+                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือกหมวดหมู่ <br>EAGLES Knowledge</div>
                 <nav class="mt-4 px-4 grid grid-rows-8 grid-flow-col gap-4">
                     <!-- Manu Column -->
                     <a href="https://eaglesthai.sharepoint.com/:v:/s/IT-Document/ERGy7XzXw0RDtR7ZNYPtd7ABHYnDQD9c1BpDFKgOoFuhZg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=UUheOb" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">แก้ปัญหาไม่สามารถล็อกอิน FWD ได้</a>
@@ -41,7 +41,7 @@
             </div>
         </aside>
         <main class="flex-grow flex flex-col">
-            <header class="bg-blue-400 h-16 item-center flex text-white font-bold text-xl shadow-xl FontThai">
+            <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
                 การแก้ปัญหาด้วยตัวเอง
             </header>
                     <div class="flex flex-col text-center text-justify justify-center items-center place-content-center p-4 bg-white m-4 h-screen  ">
@@ -50,7 +50,4 @@
         </main>
     </div>
 </body>
-
 </html>
-
-
