--- a/readmore.html
+++ b/readmore.html
@@ -17,11 +17,28 @@
         }
     </style>
 </head>
-<body>
-    <div class="px-16 grid-cols-1 md:grid-cols-1 gap-2">
-        <ul class="text-base text-2xl FontThai "> หมายเหตุ </ul>
-        <li class="text-xs FontThai"> ผู้ที่เคยเข้าร่วมฝึกอบรม E-Learning ใดไปแล้ว ไม่จำเป็นต้องเข้าร่วม</li>
-        <li class="text-xs FontThai"> E-Learning นี้ เป็นนโยบายภายใต้องค์กร พนักงาน Eagles ต้องเข้าร่วม</li>
+<body class="FontThai">
+    <header class="bg-slate-800 text-white p-4"> หมายเหตุ </header>
+    <div class="px-16 gr grid-cols-2 md:grid-cols-2 gap-4 m-4">
+        <div class="mx-auto flex max-w-lx gap-x-4 rounded-xl bg-white p-8 shadow-lg outline outline-black/5 dark:bg-slate-800 dark:shadow-none dark:-outline-offset-1 dark:outline-white/10">
+    <div>
+        <div class="border-r-4 font-medium text-black dark:text-white hover:border-b-2 m-2">เงื่อนใขการอบรม E-Learning</div>
+            <p class="text-gray-500 dark:text-gray-400 gap-4">- ผู้ที่เคยเข้าร่วมฝึกอบรม E-Learning ใดไปแล้ว ไม่จำเป็นต้องเข้าร่วม</p>
+            <p class="text-gray-500 dark:text-gray-400">- E-Learning นี้ เป็นนโยบายภายใต้องค์กร พนักงาน Eagles ต้องเข้าร่วม</p>
+    </div>
+     <div>
+        <div class="border-r-4 font-medium text-black dark:text-white hover:border-b-2 m-2">ต้องการให้เพิ่มหลักสูตร E-Learning</div>
+            <p class="text-gray-500 dark:text-gray-400">- หากต้องการให้เพิ่มหลักสูตร ผู้มีความประสงค์ต้องติดต่อทางเจ้าหน้าที่ IT เพื่อเพิ่มข้อมูลให้</p>
+            <p class="text-gray-500 dark:text-gray-400">- ส่งอีเมลล์มาที่แผนก IT เพื่อเป็นการเก็บเป็นหลักฐาน</p>
+            <p class="text-gray-500 dark:text-gray-400">- รบกวนแนบ "เอกสารประกอบการอบรม" <br>"ลิ้งค์วิดีโอฝึกอบรม","Form ลงทะเบียน"<br>และ "แบบทดสอบ" ในอีเมลล์</p>
+    </div>
+    <div>
+        <div class="border-r-4 font-medium text-black dark:text-white hover:border-b-2 m-2">ต้องการเพิ่มข้อมูล</div>
+            <p class="text-gray-500 dark:text-gray-400">- หากต้องการให้เพิ่มข้อมูล ผู้มีความประสงค์ต้องติดต่อทางเจ้าหน้าที่ IT เพื่อเพิ่มข้อมูลให้</p>
+            <p class="text-gray-500 dark:text-gray-400">- ส่งอีเมลล์มาที่แผนก IT เพื่อเป็นการเก็บเป็นหลักฐาน</p>
+            <p class="text-gray-500 dark:text-gray-400">- รบกวนแนบ "เอกสาร" "ลิ้งค์วิดีโอ","Form ข้อมูล"</p>
+
+    </div>
     </div>
 </body>
 </html>
