IT_Policie.html

--- a/IT_Policie.html
+++ b/IT_Policie.html
@@ -89,8 +89,8 @@
                     </p>
                     <div class="flex items-center">
                         <span><a href="IT_policie_vid.html"
-                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-4">E-Learning</a></span>
+                            class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">E-Learning</a></span>
                         <span><p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p></span>
                     </div>
                 </div>
@@ -161,4 +161,5 @@
 </body>
 
 </html>
+
 
