--- a/IT_Policie.html
+++ b/IT_Policie.html
@@ -88,10 +88,10 @@
                         รับชมวิดีโอการอบรม <br><br><br>
                     </p>
                     <div class="flex items-center">
-                        <span><a href="IT_policie_vid.html"
+                        <a href="IT_policie_vid.html"
                             class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">E-Learning</a></span>
-                        <span><p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p></span>
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">E-Learning</a>
+                        <p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p>
                     </div>
                 </div>
         </div>
@@ -161,5 +161,6 @@
 </body>
 
 </html>
+
 
 
