--- a/external_bi/external_Dashboard_01vid2.html
+++ b/external_bi/external_Dashboard_01vid2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
     <title>EAGLES Knowledge zone</title>
-    <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
+    <link rel="icon" type="image/x-icon" href="../Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .FontThai {
@@ -44,9 +44,9 @@
     
             <div class=" mx-12 bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai">
                 <!-- Vid frame -->
-                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai-my.sharepoint.com/personal/secretary_eaglesthai_com/_layouts/15/embed.aspx?UniqueId=f6de44b5-18e5-4bc9-831d-aad65df2dd44&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="02.Dashboard Design Principles _ Skooldio - Google Chrome 2025-09-30 14-37-03.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>            </div>
-        </div>
+                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai-my.sharepoint.com/personal/secretary_eaglesthai_com/_layouts/15/embed.aspx?UniqueId=f6de44b5-18e5-4bc9-831d-aad65df2dd44&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="02.Dashboard Design Principles _ Skooldio - Google Chrome 2025-09-30 14-37-03.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
             </div>
+        </div>
         </main>
     </div>
 
