--- a/external_bi/external_Dashboard_01vid1.html
+++ b/external_bi/external_Dashboard_01vid1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
     <title>EAGLES Knowledge zone</title>
-    <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
+    <link rel="icon" type="image/x-icon" href="../Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .FontThai {
