--- a/external_bi/external_Dashboard_01vid1.html
+++ b/external_bi/external_Dashboard_01vid1.html
@@ -44,7 +44,7 @@
     
             <div class=" mx-12 bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai">
                 <!-- Vid frame -->
-                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai-my.sharepoint.com/personal/secretary_eaglesthai_com/_layouts/15/embed.aspx?UniqueId=4fe12f18-1868-4c03-ae2d-873b515efb4d&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="01.Dashboard Design Principles _ Skooldio - Google Chrome 2025-09-30 13-24-37.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
+                <div style="max-width: 1280px"><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"><iframe src="https://eaglesthai-my.sharepoint.com/personal/chanin_k_eaglesthai_com/_layouts/15/embed.aspx?UniqueId=2d80ff19-2432-4f53-9476-bb4fa92e81fa&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="1dash.mp4" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe></div></div>
             </div>
         </div>
             </div>
