--- a/external_Dashboard_BI.html
+++ b/external_Dashboard_BI.html
@@ -41,7 +41,7 @@
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
                 <h3 class="ml-6 mr-auto FontThai ">Dashboard Design with Power BI</h3>
             </header>
-                    <div class="flex flex-col text-center text-justify place-content-center p-6 bg-white m-4 h-screen  ">
+                    <div class="flex flex-col text-center text-justify place-content-center px-8 bg-white m-4 h-screen  ">
                         <p class="FontThai text-transparent bg-clip-text bg-gradient-to-r to-blue-800 from-amber-500 text-2xl hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 ">สร้าง Impact ทางธุรกิจด้วย Dashboard ฉบับมือโปร</p>
                             <p class="m-4">ถ้าคุณอยากจะขับเคลื่อนองค์กรของคุณ ให้เป็น Data-Driven Organization การสื่อสารกันด้วยข้อมูล <br> และการใช้ประโยชน์จากข้อมูลถือเป็นหนึ่งในปัจจัยสำคัญ ถ้าแม้จะมี Dashboard แต่ถ้าการออกแบบ หรือการนำเสนอ ไม่ตรงกับวัตถุประสงค์ของผู้ใช้งาน Dashboard นั้นก็ย่อมไม่ช่วยเพิ่ม/สร้างมูลค่าในกับธุรกิจ <br> การออกแบบ Dashboard ให้สามารถสร้าง Business Impact ได้จึงต้องอาศัยความเข้าใจทั้งเรื่องทฤษฎีการออกแบบ และการใช้งาน Tool ที่มีความยืดหยุ่นตามความต้องการของผู้ใช้ 
                             จัดเต็มกับ 3 หลักสูตร ให้คุณครบตั้งแต่ความเข้าใจด้านการออกแบบ Dashboard ที่ดี ไปจนถึงการใช้เครื่องมือเพื่อสร้างสิ่งที่คุณต้องการ <br> โดยเริ่มต้นตั้งแต่ระดับพื้นฐานไปจนถึงการใช้งาน Power BI ระดับสูง ผ่านการลงมือทำจริงทั้งแบบฝึกหัด และโปรเจกต์ ที่คุณสามารถนำไปประยุกต์กับธุรกิจของคุณได้หลังเรียนจบ</p>
