--- a/external_bi/external_Dashboard_01.html
+++ b/external_bi/external_Dashboard_01.html
@@ -56,7 +56,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 1</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="external_Dashboard_01vid1.html"
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/ERn_gC0yJFNPlHa7T6kugfoBogJOli7x3pbOIJqvkLBxVg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=i6Xg3n"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
@@ -73,7 +73,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 2</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="external_Dashboard_01vid2.html"
+                        <span><a href="#"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
@@ -90,7 +90,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 3</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="external_Dashboard_01vid3.html"
+                        <span><a href="#"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
