--- a/external_bi/external_Dashboard_01.html
+++ b/external_bi/external_Dashboard_01.html
@@ -23,7 +23,6 @@
         <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             <div class="px-16 flex items-center justify-center h-16">
                 <img src="../Photo/E-LOGO.png" alt="E-LOGO">
-                <a href="../external_Dashboard_BI.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
             </div>
             
             <!-- Side Bar Frame -->
@@ -73,7 +72,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 2</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/secretary/EbVE3vblGMlLgx2q1l3y3UQB51LHUBX8UpqA1rk6aX1FEg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=allcix"
+                        <span><a href="#"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
@@ -90,7 +89,7 @@
                     </div>
                     <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 3</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/secretary/EeaCx8c9yipIjZKHYmvjha0BuVJhcOxIB2eC62Y3BvgAlw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=yW6SLF"
+                        <span><a href="#"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                         <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
@@ -135,5 +134,4 @@
     </div>
 
 </body>
-
 </html>
