--- a/manu_page.html
+++ b/manu_page.html
@@ -20,7 +20,7 @@
 <body class="font-sans ">
 
     <div class="flex h-screen bg-gray-100">
-        <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
+        <aside class="flex-none w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl relative">
             <div class="px-16 flex items-center justify-center h-16">
                 <img src="Photo/E-LOGO.png" alt="E-LOGO">
             </div>
