--- a/IT_Policie.html
+++ b/IT_Policie.html
@@ -20,10 +20,9 @@
 </head>
 <body class="font-sans ">
     <div class="flex h-screen bg-gray-100">
-        <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
+        <aside class="flex-none w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl relative">
             <div class="px-16 flex items-center justify-center h-16">
                 <img src="Photo/E-LOGO.png" alt="E-LOGO">
-                <a href="manu_e.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
             </div>
             
             <!-- Side Bar Frame -->
