external_Dashboard_02.html

--- a/external_bi/external_Dashboard_02.html
+++ b/external_bi/external_Dashboard_02.html
@@ -62,7 +62,7 @@
                     </div>
                     <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 1</h3><br>
                     <div class="flex items-center">
-                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EQaqVdt-9PVDpMJScFVxlpABfXaeetKx5XO9TckABgznXg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=DRqiHO"
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EQaqVdt-9PVDpMJScFVxlpAB1IT9O_zo9k9ICOlRsIEvtQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=dNoHrR"
                             target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                     </div>
@@ -258,4 +258,5 @@
     </div>
 
 </body>
+
 </html>
