--- a/external_bi/external_Dashboard_02.html
+++ b/external_bi/external_Dashboard_02.html
@@ -38,9 +38,7 @@
 
             </div>
             
-
         </aside>
-
         <main class="flex-grow flex flex-col **overflow-y-auto**">
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl **flex-shrink-0**">
                 <h3 class="ml-6 mr-auto p-2 FontThai ">Power BI Essentials</h3>
@@ -243,6 +241,141 @@
                     <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 13</h3><br>
                     <div class="flex items-center">
                         <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EYq-fIjWMuRHvMUpmruyp4EBKpYfLqsFwRkzMtwLaZBFWQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=MdFSYi"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 14</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">09:09 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 14</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EQYObbbm0RVLgITiPIy5zggB7EvVjniAECpPdUjJ1FBemg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=cCCIFd"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 15</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">06:18 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 15</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/Eegf78etxQNCi0qmHCPOlgsBJBu_BiH-8A3NWO_mULjTBg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=4kFgo1"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 16</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">07:47 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 16</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EUSQ-ZQ1Wl1GpYVMYW9gqtQBsKtHEIChkiMG83e57uNTvQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=Z76BK0"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 17</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">10:51 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 17</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EQZGUZEIUsRPqzHsHeFtz9MBJgjLjoVsuQ8-QedreW3UJA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=470QWG"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 18</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">10:20 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 18</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EQcTCcUAD9RIpcQ4d7yCQ1cBqJT28jvm_lWevYkAIxr6CA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=tdcOxz"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 19</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">09:07 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 19</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EZHQrGB7C2xJlsWwz4IFZ4kBuW7lzIQcucGcdqbzXN20FQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=CVBXBp"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 20</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">09:07 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 20</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EcxkLAVW3ttDt3Wf72nrwY8BA7ShoW0xlEt5CmI-JGSRMw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=QYUQmo"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 21</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">11:37 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 21</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EdKMNw1tUm1OqV1N4RVQVr8BZxkPz9nfz3EtIhZ1tYuEpA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=nfUBvY"
+                            target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
+                <img src="../Photo/PBI_eassentails.png" alt="register" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
+                        <span class="mr-2">ช่วงที่ 22</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">04:10 นาที</span>
+                    </div>
+                    <h3 class="text-l font-semibold text-white mb-2">Power BI Essentials ช่วงที่ 22</h3><br>
+                    <div class="flex items-center">
+                        <span><a href="https://eaglesthai-my.sharepoint.com/:v:/p/chanin_k/EfWLNB_1v9BGt7kUnmorcEIBt3FhsiCOSiBSICBGjGEglw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=RhzfSd"
                             target="_blank" class="bg-emerald-500 text-white text-center px-2 rounded-none py-2 tracking-tighter 
                             shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
                     </div>
